# ChangeLog for app-doc/linkers-and-loaders
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-doc/linkers-and-loaders/ChangeLog,v 1.5 2008/06/21 15:53:45 vapier Exp $

*linkers-and-loaders-1 (21 Jun 2008)

  21 Jun 2008; Mike Frysinger <vapier@gentoo.org>
  -linkers-and-loaders-0.ebuild, +linkers-and-loaders-1.ebuild:
  Fix fetching #228709 by KostyaSha and install pdf/extraneous html files.

  04 Feb 2008; Fabian Groffen <grobian@gentoo.org>
  linkers-and-loaders-0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  linkers-and-loaders-0.ebuild:
  (QA) RESTRICT clean up.

  08 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

*linkers-and-loaders-0 (14 Jan 2004)

  14 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.