@@ -1,6 +1,10 @@
 # ChangeLog for app-doc/linkers-and-loaders
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/linkers-and-loaders/ChangeLog,v 1.5 2008/06/21 15:53:45 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/linkers-and-loaders/ChangeLog,v 1.6 2008/06/28 15:26:38 vapier Exp $
+
+  28 Jun 2008; Mike Frysinger <vapier@gentoo.org>
+  linkers-and-loaders-1.ebuild:
+  Add app-arch/lzma-utils to DEPEND #228783.
 
 *linkers-and-loaders-1 (21 Jun 2008)
 
